--- a/apps/auth/src/utils/email-template/user-activation-template.ejs
+++ b/apps/auth/src/utils/email-template/user-activation-template.ejs
@@ -57,7 +57,7 @@
             <tr>
               <td style="padding: 30px 40px 40px 40px">
                 <p style="color: #333333; font-size: 16px; line-height: 1.6">
-                  Hello **<%= data.name %>**,
+                  Hello **<%= name %>**,
                 </p>
 
                 <p style="color: #333333; font-size: 16px; line-height: 1.6">
@@ -97,7 +97,7 @@
                           margin: 10px 0 0 0;
                         "
                       >
-                        **<%= data.otp %>**
+                        **<%= otp %>**
                       </p>
                     </td>
                   </tr>
